methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:11: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime6.FlowerPot'
override def run() {
             ^